--- a/Prog2Bpartone/appsettings.json
+++ b/Prog2Bpartone/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Default": "Server=YAMIKA2005;Database=MonthlyContractSystemDB;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=true"
+  },
   "AllowedHosts": "*"
 }
